Add security headers and csrf tokens to forms

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@hapi/crumb": "^8.0.1",
     "@hapi/hapi": "^20.1.5",
     "@hapi/hoek": "^9.2.0",
     "@hapi/inert": "^6.0.4",
